Creacion del homepage

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
+# APP INFO
 VUE_APP_TITLE=
+VUE_APP_DESCRIPTION=
+
+# Social media
+VUE_APP_AUTHOR=
+VUE_APP_INSTA=
+VUE_APP_LINKEDIN=
+VUE_APP_GITHUB=
+
