--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
 # APP INFO
-VUE_APP_TITLE=
-VUE_APP_DESCRIPTION=
+VUE_APP_TITLE=Gestor de Tareas 
 
 # Social media
-VUE_APP_AUTHOR=
-VUE_APP_INSTA=
-VUE_APP_LINKEDIN=
-VUE_APP_GITHUB=
+VUE_APP_DEVELOPER=Fabricio Salgado Ulloa
+VUE_APP_INSTA=https://www.instagram.com/salgado_fabr/
+VUE_APP_LINKEDIN=https://www.linkedin.com/in/fabricio-salgado-ulloa-349bbb222/
+VUE_APP_GITHUB=https://github.com/SalgadoFab
 
+# Firebase Data
+VUE_APP_FIREBASE_API_KEY=
+VUE_APP_FIREBASE_AUTH_DOMAIN=
+VUE_APP_FIREBASE_DATABASE_URL=
+VUE_APP_FIREBASE_PROJECT_ID=
+VUE_APP_FIREBASE_STORAGE_BUCKET=
+VUE_APP_FIREBASE_MESSAGE_SENDER_ID=
+VUE_APP_FIREBASE_APP_ID=
