--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "date-fns": "^2.29.3",
     "firebase": "^9.17.2",
     "material-icons": "^1.13.2",
     "vue": "^2.6.14",
