--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.17.2",
     "material-icons": "^1.13.2",
     "vue": "^2.6.14",
+    "vue-kanban": "^1.8.0",
     "vue-router": "^3.5.1",
     "vue2-datepicker": "^3.11.1",
     "vuesax": "^3.12.2",
@@ -22,6 +23,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "vue-template-compiler": "^2.6.14"
